--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
           choco install python2 --params '"/InstallDir:tools\python2"'
           .\ps1_scripts\prepare.ps1 -python2 tools\python2 -python python
       - name: Configure
-        run: .\ps1_scripts\configure.ps1
+        run: |
+          .\ps1_scripts\configure.ps1 \
+            -build_root_dir $(Join-Path $(Split-Path -Qualifier ${env:GITHUB_WORKSPACE}) 'build')
+            -use_short_path
       - name: Build
         run: .\ps1_scripts\build.ps1
