--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ jobs:
           submodules: true
       - name: Prepare
         run: |
-          choco install python2 --params '"/InstallDir:tools\python2"'
+          choco install python2 --limit-output --no-progress --params '"/InstallDir:tools\python2"'
           .\ps1_scripts\prepare.ps1 -python2 tools\python2 -python python
       - name: Configure
         run: |
           .\ps1_scripts\configure.ps1 \
-            -build_root_dir $(Join-Path $(Split-Path -Qualifier ${env:GITHUB_WORKSPACE}) 'build')
+            -build_root_dir $(Join-Path $(Split-Path -Qualifier ${env:GITHUB_WORKSPACE}) 'build') \
             -use_short_path
       - name: Build
         run: .\ps1_scripts\build.ps1
