--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -19,7 +19,9 @@ set_target_properties(cmake_discord_game_sdk
         MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 set_target_properties(engine
     PROPERTIES
-        MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+        MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
+        SUFFIX ".pyd"
+)
 
 if (ARCH STREQUAL "x86_64")
     set(ENGINE_DESTINATION "res/mods/xfw_packages/discord_rich_presence/native_64bit/")
