Add creating wotmod

--- a/project.ini
+++ b/project.ini
@@ -1,3 +1,6 @@
+version = 0.1.1
+filename = arukuka.discord_rich_presence_@version@.wotmod
+
 [depends]
 xfm_native_version = v2.1.9
 xvm_version = 8.7.9
