--- a/project.ini
+++ b/project.ini
@@ -3,4 +3,4 @@ filename = arukuka.discord_rich_presence_@version@.wotmod
 
 [depends]
 xfm_native_version = v2.1.9
-xvm_version = 8.7.9
+xfm_loader_version = 8.7.9
