--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,11 @@ jobs:
       - name: Prepare
         run: .\ps1_scripts\prepare.ps1 -python2 python
       - name: Configure
+        env:
+          TESTED_LATEST_WOT_VERSION: ${{ secrets.TESTED_LATEST_WOT_VERSION }}
         run: |
           .\ps1_scripts\configure.ps1 `
+            -tested_latest_wot_version "$env:TESTED_LATEST_WOT_VERSION" `
             -build_root_dir $(Join-Path $(Split-Path -Qualifier ${env:GITHUB_WORKSPACE}) 'build') `
             -use_short_path
       - name: Build
