--- a/project.ini
+++ b/project.ini
@@ -1,6 +1,6 @@
 version = 0.1.1
 wotmod_filename = arukuka.discord_rich_presence_@version@.wotmod
-zip_filename = arukuka.discord_rich_presence_@version@-@tested_latest_wot_version@.zip
+zip_filename = arukuka.discord_rich_presence_@version@@additional_version@-@tested_latest_wot_version@.zip
 
 [depends]
 xfm_native_version = v2.1.9
