--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,21 +13,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 2.7
-      - name: Prepare
-        run: .\ps1_scripts\prepare.ps1 -python2 python
-      - name: Configure
+      - name: Build
         env:
           TESTED_LATEST_WOT_VERSION: ${{ secrets.TESTED_LATEST_WOT_VERSION }}
         run: |
           $VerbosePreference = 'Continue'
+          .\ps1_scripts\prepare.ps1 -python2 python
           .\ps1_scripts\configure.ps1 `
             -tested_latest_wot_version "$env:TESTED_LATEST_WOT_VERSION" `
             -build_root_dir $(Join-Path $(Split-Path -Qualifier ${env:GITHUB_WORKSPACE}) 'build') `
             -use_short_path
-      - name: Build
-        run: .\ps1_scripts\build.ps1
-      - name: Package
-        run: .\ps1_scripts\package.ps1
+          .\ps1_scripts\build.ps1
+          .\ps1_scripts\package.ps1
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
