--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           $ErrorView = 'ConciseView'
           $VerbosePreference = 'Continue'
-          .\ps1_scripts\prepare.ps1 -python2 python
+          .\ps1_scripts\prepare.ps1 -python2 python -commit_sha "${env:GITHUB_SHA}"
           .\ps1_scripts\configure.ps1 `
             -tested_latest_wot_version "$env:TESTED_LATEST_WOT_VERSION" `
             -build_root_dir $(Join-Path $(Split-Path -Qualifier ${env:GITHUB_WORKSPACE}) 'build') `
